--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
+              "src/materia.global.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -100,7 +101,8 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "styles.css"
+              "styles.css",
+              "materia.global.css"
             ],
             "scripts": [],
             "assets": [
